mas-crm/force-app/main/default/objects/Dispatch__c/Dispatch__c.object-meta.xml
<CustomObject>
    <label>Dispatch</label>
    <nameField>
        <displayFormat>DSP-{0000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>