mas-crm/force-app/main/default/objects/Dispatch__c/fields/Agent_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Agent_Dispatched__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent Dispatched</label>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>