mas-crm/force-app/main/default/objects/Dispatch__c/fields/Engineer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Assigned__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engineer Assigned</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>