mas-crm/force-app/main/default/objects/Dispatch__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>