mas-crm/force-app/main/default/objects/Dispatch__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Service Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>